--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        My Site!
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Links!</title>
+  <link rel="stylesheet" href="index.css">
 </head>
-    <body>
-        <h1>This is my Github Pages website</h1>
-        <p>Test</p>
-    </body>
+<body>
+  <div class="container">
+    <h1>My Links</h1>
+    <nav>
+      <ul>
+        <li><a href="https://example.com/about">About Me</a></li>
+        <li><a href="https://example.com/projects">Projects</a></li>
+        <li><a href="https://example.com/contact">Contact</a></li>
+        <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
+        <li><a href="https://github.com/yourprofile">GitHub</a></li>
+      </ul>
+    </nav>
+  </div>
+</body>
 </html>
