--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>My Links</h1>
+    <h1>Links</h1>
     <nav>
       <ul>
-        <li><a href="https://example.com/about">About Me</a></li>
-        <li><a href="https://example.com/projects">Projects</a></li>
-        <li><a href="https://example.com/contact">Contact</a></li>
-        <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
-        <li><a href="https://github.com/yourprofile">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/peter-daae-411823290/">LinkedIn</a></li>
+        <li><a href="https://github.com/peterdaae">GitHub</a></li>
+        <li><a href="">peterdaaedeveloper@gmail.com</a></li>
       </ul>
     </nav>
   </div>
